Cap nhat test va chinh sua mot so loi